<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <groupId>io.github.agentsoz</groupId>
  <artifactId>eeslib</artifactId>
  <version>2.1.1-SNAPSHOT</version>

  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>

  <name>Emergency Evacuation Simulator Library</name>
  <description>Understanding community evacuation timing</description>
  <url>https://github.com/agentsoz/ees</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skipITs>true</skipITs> <!-- skip integration tests by default; enable with -DskipITs=false -->
  </properties>

  <scm>
    <connection>scm:git:https://github.com/agentsoz/ees.git</connection>
    <developerConnection>scm:git:https://github.com/agentsoz/ees.git</developerConnection>
    <url>https://github.com/agentsoz/ees.git</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>GNU General Lesser Public License, Version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Dhirendra Singh</name>
      <email>dhi.singh@gmail.com</email>
      <organization>AgentsOZ</organization>
      <organizationUrl>http://agentsoz.github.io</organizationUrl>
    </developer>
  </developers>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>release</id>
      <build>
      <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <!-- Geotools is not on Maven central -->
      <id>osgeo</id>
      <name>Geotools repository</name>
      <url>https://repo.osgeo.org/repository/release</url>
    </repository>
    <repository>
      <id>ojo-snapshots</id>
      <url>http://oss.jfrog.org/libs-snapshot</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.github.agentsoz</groupId>
      <artifactId>bdi-abm</artifactId>
      <version>3.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.github.agentsoz</groupId>
      <artifactId>abm-jill</artifactId>
      <version>3.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.github.agentsoz</groupId>
      <artifactId>bdi-matsim</artifactId>
      <version>3.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.github.agentsoz</groupId>
      <artifactId>util</artifactId>
      <version>3.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>io.github.agentsoz</groupId>
      <artifactId>diffusion-model</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
    </dependency>
    <!-- logging framework -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.3</version>
    </dependency>
    <!-- for JSON-style toString() of objects -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.9</version>
    </dependency>
    <!-- JUnit for unit testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version> 
      <!--<scope>test</scope>-->
    </dependency>
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>4.2.2</version>
    </dependency>
    <!-- for easy CSV parsing -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.6</version>
    </dependency>
    <!-- for easy EPSG transforms -->
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-api</artifactId>
      <version>20.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-epsg-hsql</artifactId>
      <version>20.5</version>
    </dependency>
    <dependency>
      <groupId>org.activecomponents.jadex</groupId>
      <artifactId>jadex-distribution-standard</artifactId>
      <version>4.0.267</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
    <dependency>
      <groupId>com.google.firebase</groupId>
      <artifactId>firebase-admin</artifactId>
      <version>9.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.uber</groupId>
      <artifactId>h3</artifactId>
      <version>4.1.1</version>
    </dependency>
  </dependencies>


  <build>
    <plugins>
    <!-- Begin SONATYPE setup : http://central.sonatype.org/pages/apache-maven.html -->
    <plugin>
      <groupId>org.sonatype.plugins</groupId>
      <artifactId>nexus-staging-maven-plugin</artifactId>
      <version>1.6.7</version>
      <extensions>true</extensions>
      <configuration>
        <serverId>ossrh</serverId>
        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
        <autoReleaseAfterClose>false</autoReleaseAfterClose>
      </configuration>
    </plugin>
    <!-- Maven release plugin -->
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-release-plugin</artifactId>
      <version>2.5.3</version>
      <configuration>
        <autoVersionSubmodules>true</autoVersionSubmodules>
        <useReleaseProfile>true</useReleaseProfile>
        <releaseProfiles>release</releaseProfiles>
        <goals>deploy</goals>
      </configuration>
    </plugin>
    <plugin>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.8.0</version>
      <configuration>
        <release>11</release>
      </configuration>
    </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>libs/</classpathPrefix>
              <useUniqueVersions>false</useUniqueVersions>
              <mainClass>io.github.agentsoz.ees.Run</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <!-- diable for now for travis: https://github.com/joel-costigliola/assertj-core/issues/1403 -->
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <skipAssembly>false</skipAssembly>
          <descriptors>
          <descriptor>src/assembly/ees.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>create-archive</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <organizationName>AgentsOZ</organizationName>
          <copyrightOwners>by its authors. See AUTHORS file.</copyrightOwners>
          <projectName>Emergency Evacuation Simulator</projectName>
          <inceptionYear>2014</inceptionYear>
          <licenseName>lgpl_v3</licenseName>
          <outputDirectory>${project.basedir}</outputDirectory>
          <thirdPartyFilename>THIRD-PARTY.txt</thirdPartyFilename>
          <canUpdateLicense>true</canUpdateLicense>
          <canUpdateCopyright>true</canUpdateCopyright>
          <canUpdateDescription>true</canUpdateDescription>
        </configuration>
        <executions>
          <execution>
            <id>first</id>
            <goals>
              <goal>update-project-license</goal>
              <goal>update-file-header</goal>
              <goal>add-third-party</goal>
            </goals>
            <phase>process-sources</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <!-- to skip unit test but run integration test use -DskipTests -DskipITs=false -->
          <skipTests>false</skipTests> <!-- don't let -DskipTests influence integration tests -->
          <skipITs>${skipITs}</skipITs><!-- default is to skip; to run use -DskipITs=false -->
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <excludes>
            <exclude>**/*$*</exclude> <!-- exclude all inner classes -->
          </excludes>
          <!--execute each test in separate JVM (slow, but otherwise it does not-->
          <!--work, and no problem as long as there are only integration tests):-->
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <!-- avoid out of memory errors: -->
          <argLine>-Xmx8g -Xms8g -Djava.awt.headless=true -Dmatsim.preferLocalDtds=true</argLine>
        </configuration>
      </plugin>
      <plugin>
        <!--this is because I am re-using the tests in tub-rmit-collab.  kai, nov'17-->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
